--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "A template for initial react project with webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "HOT_RELOAD=1 webpack-dev-server --config build/webpack.dev.js --color",
-    "build": "webpack --config build/webpack.prod.js --progress",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js --color",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dll": "webpack --config build/webpack.dll.js",
-    "build:report": "SHOW_REPORT=1 npm run build"
+    "build:report": "cross-env SHOW_REPORT=1 npm run build"
   },
   "keywords": [
     "webpack4",
@@ -29,6 +28,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.0.0",
