--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "file-loader": "^4.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
