--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "3",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
@@ -54,13 +55,11 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
     "webpack-fix-style-only-entries": "^0.3.0",
-    "webpack-merge": "^4.2.1",
-    "webpack-parallel-uglify-plugin": "^1.1.0"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.3",
     "axios": "^0.19.0",
-    "core-js": "3",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
@@ -68,7 +67,6 @@
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.11.1",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
