--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A template for initial react project with webpack",
   "private": true,
   "scripts": {
+    "precommit": "lint-staged",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js --color",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dll": "webpack --config build/webpack.dll.js",
@@ -24,6 +25,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -32,6 +34,12 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
