--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
@@ -68,7 +70,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.3",
     "axios": "^0.19.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.8.3",
