--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "file-loader": "^4.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
-    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
@@ -59,6 +58,7 @@
     "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "thread-loader": "^2.1.3",
     "url-loader": "^2.0.0",
     "webpack": "^4.35.0",
     "webpack-bundle-analyzer": "^3.3.2",
