--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
+    "purgecss-webpack-plugin": "^1.5.0",
     "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "thread-loader": "^2.1.3",
