--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^3.0.0",
-    "core-js": "3",
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
@@ -65,11 +64,13 @@
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
     "webpack-fix-style-only-entries": "^0.3.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.3",
     "axios": "^0.19.0",
+    "core-js": "2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "qs": "^6.7.0",
