--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "url": "https://github.com/zackley/react-env.git"
   },
   "scripts": {
-    "precommit": "lint-staged",
+    "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js --color",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dll": "webpack --config build/webpack.dll.js",
-    "build:report": "cross-env SHOW_REPORT=1 npm run build"
+    "build:report": "cross-env SHOW_REPORT=1 npm run build",
+    "lint": "eslint --max-warnings 10 src build",
+    "lint:fix": "eslint --fix src build",
+    "prebuild": "npm run lint"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "keywords": [
     "webpack4",
@@ -27,6 +35,10 @@
     "node": ">= 10.0.0"
   },
   "license": "MIT",
+  "sideEffects": [
+    "dist/*",
+    "*.scss"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
@@ -54,6 +66,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.5",
     "image-webpack-loader": "^5.0.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
     "lodash-webpack-plugin": "^0.11.5",
