--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
@@ -94,6 +95,7 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.4",
     "@hot-loader/react-dom": "^16.8.3",
     "antd": "^4.13.0",
     "axios": "^0.19.0",
