--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack4",
     "react",
     "redux",
-    "axios"
+    "react-router"
   ],
   "author": {
     "name": "Frank Fu",
@@ -98,11 +98,9 @@
     "@babel/runtime": "^7.4.4",
     "@hot-loader/react-dom": "^16.8.3",
     "antd": "^4.13.0",
-    "axios": "^0.19.0",
     "core-js": "2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "qs": "^6.7.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.11.1",
