--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "npm run dev",
     "postinstall": "npm run build:dll",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.js --color",
+    "dev:proxy": "cross-env USE_PROXY=1 npm run dev",
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dll": "webpack --config build/webpack.dll.js",
     "build:report": "cross-env SHOW_REPORT=1 npm run build",
