--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
     "build": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js --progress",
     "build:dll": "webpack --config build/webpack.dll.js",
     "build:report": "cross-env SHOW_REPORT=1 npm run build",
+    "prettier": "prettier --write *.{js,json,md}",
     "lint": "eslint --max-warnings 10 src build",
     "lint:fix": "eslint --fix src build",
     "prebuild": "npm run lint"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint",
+      "pre-commit": "lint-staged && npm run lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "@(src|build)/**/*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   },
   "keywords": [
     "webpack4",
@@ -66,9 +74,11 @@
     "cssnano": "^4.1.10",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.14.2",
     "file-loader": "^4.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
@@ -77,6 +87,7 @@
     "husky": "^4.2.5",
     "image-webpack-loader": "^5.0.0",
     "inline-manifest-webpack-plugin": "^4.0.2",
+    "lint-staged": "^10.5.4",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.7.0",
@@ -84,6 +95,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
+    "prettier": "^2.2.1",
     "purgecss-webpack-plugin": "^1.5.0",
     "purify-css": "^1.2.5",
     "sass-loader": "^7.1.0",
